force-app/main/default/objects/Sold_Product__c/Sold_Product__c.object-meta.xml
<CustomObject>
    <label>판매 제품</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Sold Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>판매 제품</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>