force-app/main/default/objects/Sold_Product__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <label>제품군</label>
    <length>255</length>
    <type>Text</type>
</CustomField>