force-app/main/default/objects/Sold_Product__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>주문서</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>판매 제품</relationshipLabel>
    <relationshipName>soldProducts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>