force-app/main/default/objects/Sold_Product__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <label>제품 코드</label>
    <length>255</length>
    <type>Text</type>
</CustomField>