force-app/main/default/objects/Sold_Product__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>제품명</label>
    <length>255</length>
    <type>Text</type>
</CustomField>