force-app/main/default/objects/Sold_Product__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <description>Serial Number - Unique</description>
    <label>시리얼 코드</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>